--- a/public/index.html
+++ b/public/index.html
@@ -27,14 +27,37 @@
     <title>EVASE</title>
   </head>
   <body>
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="/__/firebase/8.2.0/firebase-app.js"></script>
+    <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
 
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-        https://firebase.google.com/docs/web/setup#available-libraries -->
-
+    <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+    <script src="/__/firebase/8.2.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-analytics.js"></script>
+    <!-- Add the Performance Monitoring library -->
+    <script src="/__/firebase/8.2.2/firebase-performance.js"></script>
     <!-- Initialize Firebase -->
     <script src="/__/firebase/init.js"></script>
+
+    <!-- Initialize Performance Monitoring and get a reference to the service -->
+    <script>
+      var perf = firebase.performance();
+      // ...
+    </script>
+    <script>
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      var firebaseConfig = {
+        apiKey: "AIzaSyBFD0devGbKBVlGwKSJPsSBQtgIfn4y-04",
+        authDomain: "evase-bfc45.firebaseapp.com",
+        projectId: "evase-bfc45",
+        storageBucket: "evase-bfc45.appspot.com",
+        messagingSenderId: "950530571002",
+        appId: "1:950530571002:web:78f1abbf0f6945a3b46743",
+        measurementId: "G-5PXZNSQQK2"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+    </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
